--- a/src/style/changeDate.scss
+++ b/src/style/changeDate.scss
@@ -12,7 +12,7 @@
     border:none;
     font-weight:100;
 
-    transform: rotate(-73deg) translate(-70px, -70px);
+    transform: rotate(-70deg) translate(-70px, -70px);
 
     &:focus{
         outline: none;
