--- a/src/style/clock.scss
+++ b/src/style/clock.scss
@@ -1,11 +1,11 @@
 .clock {
     grid-row: 3/4;
-    grid-column: 2/11;
+    grid-column: 2/10;
     align-self: end;
 
     background-color: $color-grey-one;
     text-align: left;
-    height: 75%;
+    height: 85%;
 
     -webkit-clip-path: polygon(7% 0, 100% 0, 93% 100%, 0% 100%);
     clip-path: polygon(7% 0, 100% 0, 93% 100%, 0% 100%);
@@ -13,7 +13,6 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 275px));
-    grid-column-gap: 80px;
     align-items: center;
     align-content: center;
     justify-items: center;
